# opcua-turbo

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  USAGE.md  main.py  opcua_reader.py  opcua_writer.py  pyproject.toml  requirements.txt  test_opcua.py
docs/: API.md  ARCHITECTURE.md
examples/: README.md  __init__.py  combined_operations.py  simple_reader.py  simple_writer.py
opcua/: __init__.py  cache.py  formatter.py  navigator.py  parser.py  reader.py
src/opcua/: __init__.py
src/opcua/client/: __init__.py  reader.py  writer.py
src/opcua/core/: __init__.py  common.py  type_conversion.py
src/opcua/navigation/: __init__.py  navigator.py
src/opcua/parsing/: __init__.py  parser.py
tests/: __init__.py  conftest.py  test_opcua.py
